font_files = [
'788742748bf8bfbd3b6b56859f92938275da74bd.otf',
'a22e097e7f3cefffd1a602674dff5108efa0eec2.ttf',
'bcb3b98eb67ece19b8b709f77143d91bcb3d95eb.ttf',
'd46a2549d27c32605024201abf801bb9a9273da3.ttf',
'db17d357d9d813a863c3859d2f3af11faa0b39c7.ttf',
'e4c7989e4c78dc2af43fd87ede6a6ba6cbf14cb5.ttf',
]

foreach font_file: font_files
  configure_file(input: font_file, output: font_file, copy: true)
endforeach
